Testing for Service and Controller added